--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "www.example.com"
 languageCode = "en-us"
-title = "Hugo Serif Theme"
+title = "Ting Yuan"
 
 [params]
 google_analytics_id = ""
