--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ google_tag_manager_id = ""
   hide_view_all_services = false
 
   [params.logo]
-  mobile = "images/logo/logo-mobile.svg"
+  mobile = "images/thoughtful-squid.jpg"
   mobile_height = "36px"
   desktop = "images/ISIF.jpg"
   desktop_height = "36px"
