--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ google_tag_manager_id = ""
   mobile_height = "36px"
   desktop = "images/ISIF.jpg"
   desktop_height = "36px"
-  alt = "Serif - A Hugo Business Theme"
+  alt = "Serif"
 
   [params.homepage_meta_tags]
   meta_description = "Serif is a modern business theme for Hugo. It contains content types for the archetypical business website. The theme is fully responsive, blazing fast and artfully illustrated."
