--- a/config.toml
+++ b/config.toml
@@ -14,7 +14,7 @@ google_tag_manager_id = ""
   mobile = "images/thoughtful-squid.jpg"
   mobile_height = "36px"
   desktop = "images/ISIF.jpg"
-  desktop_height = "px"
+  desktop_height = "50px"
   alt = "Serif"
 
   [params.homepage_meta_tags]
