--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,7 @@ title = "Ting Yuan"
 [params]
 google_analytics_id = ""
 google_tag_manager_id = ""
+footer = { }
 
   [params.homepage]
   show_call_box = true
@@ -30,9 +31,6 @@ google_tag_manager_id = ""
 
   [params.team]
   summary_large_truncate = 120
-
-  [params.footer]
-  copyright_text = 'Free Hugo theme by <a class="zerostatic" href="https://www.zerostatic.io">www.zerostatic.io</a>'
 
 [[menu.main]]
 name = "Services"
