--- a/config.toml
+++ b/config.toml
@@ -14,7 +14,7 @@ footer = { }
   [params.logo]
   mobile = "images/thoughtful-squid.jpg"
   mobile_height = "36px"
-  desktop = "images/ISIF.jpg"
+  desktop = "images/TY.jpg"
   desktop_height = "50px"
   alt = "Serif"
 
