--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ footer = { }
   hide_view_all_services = false
 
   [params.logo]
-  mobile = "images/thoughtful-squid.jpg"
+  mobile = "images/nervous-stegosaurus.jpg"
   mobile_height = "36px"
   desktop = "images/TY.jpg"
   desktop_height = "50px"
