--- a/config.toml
+++ b/config.toml
@@ -62,7 +62,7 @@ weight = 4
 
 [[menu.main]]
 identifier = "lorem-ipsum"
-name = "lorem-ipsum"
+name = "SensorFusion"
 url = "lorem-ipsum"
 weight = 0
 parent = "lorem-ipsum"
