--- a/config.toml
+++ b/config.toml
@@ -70,7 +70,7 @@ type = "site_menu_item"
 
 [[menu.main]]
 identifier = "lorem-ipsum"
-name = "lorem-ipsum"
+name = "Products"
 url = "lorem-ipsum"
 weight = 0
 parent = "lorem-ipsum"
