--- a/config.toml
+++ b/config.toml
@@ -76,6 +76,14 @@ weight = 0
 parent = "lorem-ipsum"
 type = "site_menu_item"
 
+[[menu.main]]
+identifier = "lorem-ipsum"
+name = "lorem-ipsum"
+url = "lorem-ipsum"
+weight = 0
+parent = "lorem-ipsum"
+type = "site_menu_item"
+
 [[menu.footer]]
 name = "Home"
 url = "/"
