--- a/config.toml
+++ b/config.toml
@@ -78,7 +78,7 @@ type = "site_menu_item"
 
 [[menu.main]]
 identifier = "lorem-ipsum"
-name = "lorem-ipsum"
+name = "Blog"
 url = "lorem-ipsum"
 weight = 0
 parent = "lorem-ipsum"
