--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -191,6 +191,11 @@ models:
         label: Title
         description: The title of the menu item
         required: true
+            - type: string
+        name: name
+        label: Title
+        description: The title of the menu item
+        required: true
       - type: string
         name: parent
         label: Parent Menu Identifier
